# EmptyProject

./: CMakeLists.txt  README.md
config/: config.json  request.json
include/: converter.h  inverted_index.h  server.h
src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
